--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jimbo</title>
+    <title>jimboverse</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Top text -->
+    <div class="top-text">welcome to the jimboverse</div>
+    
+    <!-- Three.js container -->
     <div id="container"></div>
+    
+    <!-- Bottom text -->
+    <div class="bottom-text">LYpd4UneZEFQ2YaCBwAdZ8bu7NSyq7QLkuuUWyppump</div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="script.js"></script>
