--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Top text -->
-    <div class="top-text">welcome to the jimboverse</div>
+    <div class="top-text">jimbo says huehweushuwesuehueh</div>
     
     <!-- Three.js container -->
     <div id="container"></div>
@@ -21,3 +21,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
