Update warning message in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Top text -->
-    <div class="top-text">jimbo says huehweushuwesuehueh</div>
+    <div class="top-text">WARNING: Don't click on this creature below.</div>
     
     <!-- Three.js container -->
     <div id="container"></div>
@@ -21,4 +21,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
