--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Top text -->
-    <div class="top-text">WARNING: Don't click on this creature below.</div>
+    <div class="top-text">welcome to the jimboverse</div>
     
     <!-- Three.js container -->
     <div id="container"></div>
@@ -21,5 +21,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
